--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    function myFunction() {
+      document.body.style.backgroundColor = "red";
+  }
+  </script>
 </html>
